# take-it-easy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-build.yml  cmake.yml  gcc-build-and-test.yml  gcc-build.yml
src/: CMakeLists.txt  take-it-easy.cpp
src/board/: CMakeLists.txt  board.cpp  board.hpp
src/tile/: CMakeLists.txt  tile.cpp  tile.hpp
test/: CMakeLists.txt  board-test.cpp
